<resources>
  <string name="app_name">陌隐身助手</string>
  <string name="install_app_list">添加应用</string>
  <string name="main_add_title">添加</string>
  <string name="common_progress_loading">加载中</string>
  <string name="app_clear">清除数据</string>
  <string name="app_stop">退出运行</string>
  <string name="app_remove">移除应用</string>
  <string name="plugin_remove">移除插件</string>
  <string name="search_hint">搜索需要添加的应用</string>
  <string name="cancel">取消</string>
  <string name="submit">确定</string>
  <string name="tip_infos">提示</string>
  <string name="install_description"><![CDATA[是否将<font color="#299EE3">%1s</font>导入，进行隐藏/双开]]></string>
  <string name="about_us_app_version">版本:%1s</string>
  <string name="main_tab_apps">我的应用</string>
  <string name="main_tab_x_plugin">X插件</string>
  <string name="main_tab_me">个人中心</string>
  <string name="about_user_agreement">用户协议</string>
  <string name="about_policy">隐私政策</string>
  <string name="me_update_version">版本更新</string>
  <string name="me_last_version">已是最新版本</string>
  <string name="me_version">(%1s)</string>
  <string name="app_launcher_tip">首次启动慢正常，请您耐心等待，我们正在加速优化</string>
  <string name="app_install_tip">请您耐心等待，我们正在加速安装</string>
  <string name="me_add_qq_group">加入QQ交流群</string>
  <string name="me_github">GitHub主页</string>
  <string name="me_open_gms">安装GMS服务</string>
  <string name="me_set_password">设置密码</string>
  <string name="login_welcome_use">欢迎您使用</string>
  <string name="login_agreement">同意并进入</string>
  <string name="login_disagreement">不同意</string>
  <string name="login_dlg_agreement">同意</string>
  <string name="login_read_protocol">请仔细阅读并理解我们的%1s和%2s，只有在您同意全部条款的情况下，才能使用完整版功能。</string>
  <string name="login_dlg_read_protocol"> 非常抱歉！您需要同意%1s、%2s内容，才能使用完整功能。若您不同意相关政策，很遗憾我们将只能为您提供基础服务。</string>
  <string name="login_first_launcher">在使用我们的应用程序时，您需要授权以下权限：</string>
  <string name="login_store_permission">1、储存权限（含SD卡数据）</string>
  <string name="login_store_permission_tip">用于存储多开应用使用过程中的缓存数据。</string>
  <string name="login_phone_permission">2、电话权限</string>
  <string name="login_phone_permission_tip">使用电话权限收集设备号等信息（电话、设备序列号、MAC地址、IMEI、AndroidJD、WIFI（如BSSID，SSID））用于统计分身应用运行状态和稳定性和三方登录。</string>
  <string name="login_app_list_permission">3、软件安装列表</string>
  <string name="login_app_list_permission_tip">我们将使用本地已安装应用来快速完成分身应用安装。</string>
  <string name="login_launcher_app_permission">4、启动/运行分身应用</string>
  <string name="login_launcher_app_permission_tip">在使用分身软件过程中，需要（视多开应用决定）提供电话权限、读取电话状态、通讯录、设备信息、WIFI（如BSSID,SSID）、相机、位置等权限，用于保障分身应用正常运行。</string>
  <string name="login_protocol">《用户协议》</string>
  <string name="login_policy">《隐私政策》</string>
  <string name="login_dlg_policy_and_protocol">隐私政策以及用户协议</string>
  <string name="login_close_app">即将退出应用</string>
  <string name="login_by_click">点击登录</string>
  <string name="me_not_support">未安装手Q或安装的版本不支持</string>
  <string name="me_rl_apply_for_cancellation">申请注销</string>
  <string name="me_logout_popup_title">再次确认是否注销本账户</string>
  <string name="me_logout_popup_description">注销后您在本账号上的所有数据和特权将永久消失，请谨慎操作！</string>
  <string name="me_logout_popup_confirm">确认注销</string>
  <string name="me_logout_popup_cancel">取消</string>
  <string name="net_work_err">服务暂时无法响应，请检测网络连接</string>
  <string name="install_gms_success">Google服务安装成功</string>
  <string name="install_gms_failure">Google服务安装失败</string>
  <string name="main_import_from_sd">SD卡导入</string>
  <string name="main_add_plugin">添加插件</string>
  <string name="x_plugin_install_fail">安装失败 请检测安装包是否正确</string>
  <string name="x_plugin_select_xposed_plugin">请选择xposed插件</string>
  <string name="password_setting">密码设置</string>
  <string name="password_setting_btn_text">设置密码</string>
  <string name="password_setting_change">更换密码</string>
  <string name="password_setting_tip">只需要设置4位数密码，就可以开启专属自己的私密空间。设置完成后，每次进入应用需要输入密码验证，保证您的隐私安全。</string>
  <string name="input_password">请输入4位数密码</string>
  <string name="input_password_tip">启动APP时设置密码开启自己的专属空间\n为严格保护数据隐私，忘记密码无法找回</string>
  <string name="input_password_again">再次输入4位数密码</string>
  <string name="input_password_error">两次输入的密码不一致，请重新输入</string>
  <string name="input_password_success">密码设置成功，现在输入密码继续体验吧</string>
  <string name="prompt_popup_title">温馨提示</string>
  <string name="clear_password_description">密码清除后，您的隐私空间将面安全风险！确定要清除密码吗？</string>
  <string name="clear_password_cancel">再想想</string>
  <string name="clear_password_sure">确定</string>
  <string name="warning_password_tip">您的密码是：%1$s \n为严格保护数据隐私，忘记密码无法找回</string>
  <string name="calc_close_warning_password_tip">关闭</string>
</resources>