<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical">

  <ImageView
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_marginTop="45dp"
    android:contentDescription="@string/app_name"
    android:src="@drawable/box_ic_launcher_about_us" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/app_name"
    android:textSize="20sp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/app_version"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:textSize="13sp"
    android:textStyle="bold"
    tools:text="@string/about_us_app_version" />

  

  <RelativeLayout
    android:background="?attr/selectableItemBackground"
    android:layout_marginTop="60dp"
    android:id="@+id/rl_user_agreement"
    android:layout_width="wrap_content"
    android:layout_height="52dp"
    android:gravity="center_vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/about_user_agreement"
      android:textSize="15sp" />

    <ImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_alignParentRight="true"
      android:scaleType="centerInside"
      android:src="@drawable/icon_right_arrow" />
  </RelativeLayout>

  <include layout="@layout/view_divider_line"
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"/>

  <RelativeLayout
    android:id="@+id/rl_policy"
    android:background="?attr/selectableItemBackground"
    android:layout_width="wrap_content"
    android:layout_height="52dp"
    android:gravity="center_vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/about_policy"
      android:textSize="15sp" />

    <ImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_alignParentRight="true"
      android:scaleType="centerInside"
      android:src="@drawable/icon_right_arrow" />
  </RelativeLayout>

  <include layout="@layout/view_divider_line"
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>